styled component stuff

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./DFS_Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"/>
+<!--    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"/>-->
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet"/>
     <meta name="theme-color" content="#000000" />
     <meta
